--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-</html>
+import React, { useState } from "react";
+
+function UploadFile() {
+  const [file, setFile] = useState(null);
+
+  const handleChange = (e) => {
+    const selected = e.target.files[0];
+    if (selected) {
+      setFile(selected);
+    }
+  };
+
+  return (
+    <div>
+      <input
+        type="file"
+        accept="image/*,video/*"
+        onChange={handleChange}
+      />
+
+      {file && file.type.startsWith("image/") && (
+        <img
+          src={URL.createObjectURL(file)}
+          alt="preview"
+          width="400"
+          style={{ marginTop: "10px" }}
+        />
+      )}
+
+      {file && file.type.startsWith("video/") && (
+        <video
+          controls
+          width="400"
+          style={{ marginTop: "10px" }}
+        >
+          <source src={URL.createObjectURL(file)} type={file.type} />
+          Your browser does not support the video tag.
+        </video>
+      )}
+    </div>
+  );
+}
+
+export default UploadFile;
